fix end spacing by request

--- a/app/assets/stylesheets/full.css.scss
+++ b/app/assets/stylesheets/full.css.scss
@@ -95,7 +95,7 @@ header {
 	}
 }
 
-.page#contact{ height: 1000px; }
+.page#contact{ height: 3000px; }
 
 .page#home{
 	margin-top: 30px;  
